--- a/index.html
+++ b/index.html
@@ -112,20 +112,28 @@
         <div class="content-wrap">
           <h2>More</h2>
           <div class="photo-portfolio">
-            <a href="international-womens-day-2020.html" class="portfolio-item">
+            <a href="articles/international-womens-day-2020.html" class="portfolio-item">
               <img src="images/iwd-google.jpg" alt="" height="150px" width="150px" class="portfolio-img">
             </a>
 
-            <a href="women-techmakers-scholar.html" class="portfolio-item">
+            <a href="articles/women-techmakers-scholar.html" class="portfolio-item">
               <img src="images/women-techmakers.png" alt="Women Techmakers logo" height="150px" width="150px"class="portfolio-img">
             </a>
 
-            <a /*href*/ class="portfolio-item">
-              <img src="" alt="" class="portfolio-img">
+            <a href="articles/anita-newell-scholar.html" class="portfolio-item">
+               <img src="images/anitaNewell_scholar.jpg" alt="TCD engineering scholarship winners 2019"  height="150px" width="150px"class="portfolio-img">
+             </a>
+
+            <a href="articles/intel-volunteer-2019.html" class="portfolio-item">
+              <img src="images/intel_volunteer.jpg" alt="helping child with an experiment"  height="150px" width="150px" class="portfolio-img">
             </a>
 
-            <a /*href*/ class="portfolio-item">
-              <img src="" alt="" class="portfolio-img">
+            <a href="articles/employability-award.html" class="portfolio-item">
+              <img src="images/employability_award.jpg" alt="getting employability award "  height="150px" width="150px" class="portfolio-img">
+            </a>
+
+            <a href="articles/wit-scholar.html" class="portfolio-item">
+              <img src="images/wit_scholar.jpg" alt="getting Intel Women in technology scholarship"  height="150px" width="150px" class="portfolio-img">
             </a>
           </div>
         </div>
